tests/NormalTests/paczka1/small_fuzzy/20545759.err
Error in line 5: YC18v S3aa 143,6
Error in line 4: CAcj7EkQ8gw A109 33,0
